[package]
name = "example"
version = "0.1.0"
edition = "2021"


[dependencies]
logger = { workspace = true }
axum = "0.7.5"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["full"] }
jwt = { workspace = true }
anyhow = "1.0.86"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
